# python3-api-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  runserver.py
poetry_python_api/: api.py  database.py  models.py  schemas.py
